Fix book styles on mobile

--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -40,7 +40,7 @@
   }
 
   .cMKqNs {
-    line-height: 0.9;
+    line-height: 0.9 !important;
   }
 
   .nav-items {
